// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskModel should create new one task 1`] = `
Object {
  "created": Any<String>,
  "done": 0,
  "id": 4,
  "title": "新しい計画",
  "updated": Any<String>,
}
`;

exports[`TaskModel should return all tasks 1`] = `
Array [
  Object {
    "created": "2022-11-29 15:31:37",
    "done": 0,
    "id": 1,
    "title": "血液レポートのグラフが空白になっている",
    "updated": "2022-11-29 15:31:37",
  },
  Object {
    "created": "2022-11-29 15:31:37",
    "done": 1,
    "id": 2,
    "title": "無効にする|| ユーザーがアカウントを無効にできない",
    "updated": "2022-11-29 15:31:37",
  },
  Object {
    "created": "2022-11-29 15:31:37",
    "done": 0,
    "id": 3,
    "title": "プロフィール、プロフィールの編集、ポップアップ",
    "updated": "2022-11-29 15:31:37",
  },
]
`;

exports[`TaskModel should return task with id 1 1`] = `
Object {
  "created": "2022-11-29 15:31:37",
  "done": false,
  "id": 1,
  "title": "血液レポートのグラフが空白になっている",
  "updated": "2022-11-29 15:31:37",
}
`;
